--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@gooddata/sdk-backend-bear": "^8.1.0",
+    "@gooddata/sdk-model": "^8.1.0",
+    "@gooddata/sdk-ui": "^8.1.0",
+    "@gooddata/sdk-ui-charts": "^8.1.0",
     "@progress/kendo-data-query": "^1.5.0",
     "@progress/kendo-drawing": "^1.5.9",
     "@progress/kendo-react-buttons": "^2.7.1",
